--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,307 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #030304;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 120vh;
+  z-index: 0;
+  object-fit: cover;
+  object-position: center;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+.audio{
+  z-index: 2;
+}
+
+.zencontent{
+  z-index: 1;
+  padding-top: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+}
+
+.zentitle2, .zentext, .bg {
+  transition: opacity 0.5s ease-in-out !important;
+}
+
+.zentitle {
+  position: absolute;
+  left: 50%;
+  top: 5%;
+  transform: translate(-50%, -50%);
+  padding: 5px 10px 5px 20px;
+  z-index: 2;
+  font-size: 1em;
+  text-transform: uppercase;
+  letter-spacing: 0.8em;
+  font-weight: 200;
+  color: rgba(255, 255, 255, 0.5);
+  background-color:rgba(0, 0, 0, 0.4);
+
+  border-radius: 25px;
+  border-width: 0;
+  backdrop-filter: blur(4px);
+}
+
+.zentitle2{
+  z-index: 1;
+  margin: 0;
+  font-family: 'Times New Roman', Times, serif;
+  color: aliceblue;
+  opacity: 0.75 !important;
+  font-size: 4em;
+  font-weight: 500;
+}
+
+.zentext{
+  z-index: 1;
+  margin: 0;
+  text-transform: uppercase;
+  color: aliceblue;
+  opacity: 0.55 !important;
+  letter-spacing: 0.5em;
+  font-size: 1em;
+  font-weight: 400;
+}
+.playbutton{
+  margin-top: 50px;
+  padding: 12px 25px;
+  z-index: 2;
+  font-size: 1em;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.6);
+  background-color:rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+  border-width: 0;
+  backdrop-filter: blur(4px);
+  transition: all  .3s ease-in-out;
+}
+.playbutton:hover{
+  transform: scale(1.025);
+  color: rgba(255, 255, 255, 0.8);
+  background-color:rgba(255, 255, 255, 0.2);
+}
+
+.gradient-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 300%;
+  overflow: hidden;
+  z-index: 0; 
+  pointer-events: none;
+  overflow: hidden;
+  background-image: linear-gradient(to bottom,
+  rgba(0, 0, 0, 0.1),
+  rgba(0, 0, 0, 0.2), 
+  rgba(0, 0, 0, 0.4), 
+  rgba(0, 0, 0, 0.6),  
+  rgba(0, 0, 0, 0.8),
+  rgba(0, 0, 0, 1), 
+  rgba(0, 0, 0, 1),
+  rgba(0, 0, 0, 1),
+  rgba(0, 0, 0, 1),
+  rgba(0, 0, 0, 1))
+}
+
+.arrow {
+  opacity: 0.5; 
+  padding-top: 160px;
+  z-index: 10;
+  height: 40px;
+  animation: smoothBounce 5s infinite alternate; 
+}
+
+@keyframes smoothBounce {
+  0%   { transform: translateY(0); }   /* Start position */
+  50%  { transform: translateY(-10px); } /* Move up slightly */
+  100% { transform: translateY(0); }   /* Return to start */
+}
+
+.catalogue-box{
+  height: 220px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 100px;
+  z-index: 1;
+  padding: 180px 20px 0px;
+  color: rgba(255, 255, 255, 0.6);
+}
+.catalogue-title2{
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+}
+.catalogue-title h2{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 300;
+  font-size: 1.6em;
+  padding: 0;
+  margin: 0;
+}
+.catalogue-title p{
+  font-weight: 400;
+  font-size: 0.9em;
+  padding: 10px 0 0 0;
+  margin: 0;
+}
+.catalogue-git{
+    color: rgb(79, 141, 242, 0.7);
+    font-size: 0.9em;
+    text-decoration: none;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  height: 100%;
+}
+
+.cards .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: brightness(60%);;
+  height: 100%;
+  width: 350px !important;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  transition: 400ms;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.overlay{
+  border-radius: 10px;
+}
+
+.cards .card .ctitle {
+  z-index: 10;
+  padding: 0;
+  margin: 0;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 2em;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 700;
+}
+.cards .card .cloc {
+  z-index: 10;
+  padding: 0;
+  margin: 0;
+  font-size: 0.8em;
+  color: rgba(255, 255, 255,0.7);
+  font-weight: 200;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+}
+.cards .card:hover {
+  transform: scale(1.025, 1.025);
+}
+
+.cards:hover > .card:not(:hover) {
+  transform: scale(0.975, 0.975);
+}
+
+/*volume*/
+
+.slider {
+  /* slider */
+  --slider-width: 100%;
+  --slider-height: 6px;
+  --slider-bg: rgba(82, 82, 82, 0.25);
+  --slider-border-radius: 999px;
+    backdrop-filter: blur(4px);
+  /* level */
+  --level-color: rgba(255, 255, 255, 0.5);
+  --level-transition-duration: .1s;
+  /* icon */
+  --icon-margin: 15px;
+  --icon-color: var(--slider-bg);
+  --icon-size: 25px;
+}
+
+.slider {
+  position: absolute;
+  rotate: 270deg;
+  top: 50%;
+  right: 50px;
+  z-index: 10;
+  cursor: pointer;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.slider .volume {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: var(--icon-margin);
+  color: var(--icon-color);
+  width: var(--icon-size);
+  height: auto;
+}
+
+.slider .level {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 150px;
+  height: 22.5px;
+  background: rgba(82, 82, 82, 0.25);
+  overflow: hidden;
+  border-radius: 10px;
+  -webkit-transition: height var(--level-transition-duration), background-color 0.5s ease-in-out;
+  -o-transition: height var(--level-transition-duration), background-color 0.5s ease-in-out;
+  transition: height var(--level-transition-duration), background-color 0.5s ease-in-out;
+  cursor: inherit;
+}
+
+.slider .level::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0;
+  height: 0;
+  -webkit-box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.5);
+  box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.5);
+  transition: box-shadow 4s ease-in-out;
+}
+
+.slider:hover .level {
+  transform: scale(1.05);
+  width: 150px;
+  height: 45px;
+  background: rgba(82, 82, 82, 0.4);
+}
+
+.slider:hover .level::-webkit-slider-thumb {
+  -webkit-box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.75);
+  box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.75);
 }
