--- a/app/globals.css
+++ b/app/globals.css
@@ -1,19 +1,26 @@
 html,
 body {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
   padding: 0;
   margin: 0;
+  width: 100vw;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #030304;
 }
-
 .bg {
+  z-index: 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  max-height: 120vh;
   z-index: 0;
   object-fit: cover;
   object-position: center;
@@ -26,13 +33,29 @@ body {
 }
 
 .zencontent{
-  z-index: 1;
   padding-top: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: sans-serif;
+}
+.zengrad{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 0; 
+  background-image: linear-gradient(to bottom,
+  rgba(0, 0, 0, 0), 
+  rgba(0, 0, 0, 0.125),
+  rgba(0, 0, 0, 0.25),
+  rgba(0, 0, 0, 0.375),
+  rgba(0, 0, 0, 0.5))
 }
 
 .zentitle2, .zentext, .bg {
@@ -52,13 +75,15 @@ body {
   font-weight: 200;
   color: rgba(255, 255, 255, 0.5);
   background-color:rgba(0, 0, 0, 0.4);
-
   border-radius: 25px;
   border-width: 0;
   backdrop-filter: blur(4px);
 }
 
 .zentitle2{
+  text-align: center;
+  line-height: 1em;
+  padding-bottom: 0.5em;
   z-index: 1;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
@@ -98,22 +123,19 @@ body {
 }
 
 .gradient-blur {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
-  height: 300%;
+  height: 100%;
   overflow: hidden;
   z-index: 0; 
-  pointer-events: none;
-  overflow: hidden;
   background-image: linear-gradient(to bottom,
-  rgba(0, 0, 0, 0.1),
-  rgba(0, 0, 0, 0.2), 
-  rgba(0, 0, 0, 0.4), 
-  rgba(0, 0, 0, 0.6),  
-  rgba(0, 0, 0, 0.8),
-  rgba(0, 0, 0, 1), 
+  rgba(0, 0, 0, 0.5),
+  rgba(0, 0, 0, 0.625), 
+  rgba(0, 0, 0, 0.750), 
+  rgba(0, 0, 0, 0.875), 
   rgba(0, 0, 0, 1),
   rgba(0, 0, 0, 1),
   rgba(0, 0, 0, 1),
@@ -125,32 +147,41 @@ body {
   padding-top: 160px;
   z-index: 10;
   height: 40px;
+  padding-bottom: 20vh;
   animation: smoothBounce 5s infinite alternate; 
 }
 
 @keyframes smoothBounce {
-  0%   { transform: translateY(0); }   /* Start position */
-  50%  { transform: translateY(-10px); } /* Move up slightly */
-  100% { transform: translateY(0); }   /* Return to start */
+  0%   { transform: translateY(0); } 
+  50%  { transform: translateY(-10px); }
+  100% { transform: translateY(0); }
 }
 
-.catalogue-box{
-  height: 220px;
+.catalogue-box {
+  width: 90%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  flex-direction: row;
-  gap: 100px;
-  z-index: 1;
-  padding: 180px 20px 0px;
+  flex-wrap: wrap;
+  gap: 25px 20px;
+  padding-bottom: 20vh;
   color: rgba(255, 255, 255, 0.6);
 }
+.catalogue-title{
+  padding-right: 50px !important;  
+  height: 220px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .catalogue-title2{
+  z-index: 10;
   display: flex;
   align-items: end;
   flex-direction: column;
 }
 .catalogue-title h2{
+  z-index: 10;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 300;
   font-size: 1.6em;
@@ -158,6 +189,7 @@ body {
   margin: 0;
 }
 .catalogue-title p{
+  z-index: 10;
   font-weight: 400;
   font-size: 0.9em;
   padding: 10px 0 0 0;
@@ -169,14 +201,8 @@ body {
     text-decoration: none;
 }
 
-.cards {
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-  height: 100%;
-}
-
-.cards .card {
+.catalogue-box .card {
+  height: 220px !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -184,9 +210,9 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: brightness(60%);;
-  height: 100%;
-  width: 350px !important;
+  backdrop-filter: brightness(60%);
+  min-width: 350px;
+  flex-grow: 1;  
   border-radius: 10px;
   color: white;
   cursor: pointer;
@@ -196,31 +222,33 @@ body {
 .overlay{
   border-radius: 10px;
 }
-
-.cards .card .ctitle {
+.card .ctitle {
+  text-align: center;
+  line-height: 1.1em;
+  padding-bottom: 0.5em;
+  opacity: 0.8;
   z-index: 10;
-  padding: 0;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
   font-size: 2em;
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
   font-weight: 700;
 }
-.cards .card .cloc {
+.catalogue-box .card .cloc {
   z-index: 10;
   padding: 0;
   margin: 0;
   font-size: 0.8em;
-  color: rgba(255, 255, 255,0.7);
+  color: rgba(255, 255, 255,0.5);
   font-weight: 200;
   text-transform: uppercase;
   letter-spacing: 0.4em;
 }
-.cards .card:hover {
+.catalogue-box .card:hover {
   transform: scale(1.025, 1.025);
 }
 
-.cards:hover > .card:not(:hover) {
+.catalogue-box:hover > .card:not(:hover) {
   transform: scale(0.975, 0.975);
 }
 
@@ -304,4 +332,15 @@ body {
 .slider:hover .level::-webkit-slider-thumb {
   -webkit-box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.75);
   box-shadow: -200px 0 0 200px rgba(255, 255, 255, 0.75);
+}
+
+@media only screen and (max-width: 1000px){
+  .slider{
+    display: none;
+  }
+}
+@media only screen and (max-width: 500px){
+  .zentitle2{
+    font-size: 3em;
+  }
 }
