--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,17 @@ body {
   line-height: 1.6;
   background-color: #030304;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .bg {
   z-index: 0;
   position: fixed;
@@ -220,7 +231,10 @@ body {
   background-color: rgba(255, 255, 255, 0.05);
 }
 .overlay{
-  border-radius: 10px;
+  border-radius: 10px !important;
+}
+.card .card-img-top {
+  border-radius: 10px !important;
 }
 .card .ctitle {
   text-align: center;
