--- a/app/globals.css
+++ b/app/globals.css
@@ -75,15 +75,16 @@ body {
 
 .zentitle {
   position: absolute;
+  width: 270px;
   left: 50%;
   top: 5%;
   transform: translate(-50%, -50%);
-  padding: 5px 10px 5px 20px;
+  padding: 5.5px 10px 5px 20px;
   z-index: 2;
   font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 0.8em;
-  font-weight: 200;
+  font-weight: 300;
   color: rgba(255, 255, 255, 0.5);
   background-color:rgba(0, 0, 0, 0.4);
   border-radius: 25px;
@@ -175,7 +176,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: 25px 20px;
-  padding-bottom: 20vh;
+  padding-bottom: 200px;
   color: rgba(255, 255, 255, 0.6);
 }
 .catalogue-title{
@@ -186,12 +187,14 @@ body {
   justify-content: center;
 }
 .catalogue-title2{
-  z-index: 10;
+  padding-left: 50px !important;  
+  height: 220px !important;
   display: flex;
   align-items: end;
   flex-direction: column;
+  justify-content: center;
 }
-.catalogue-title h2{
+.catalogue-title h2, .catalogue-title2 h2{
   z-index: 10;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 300;
@@ -199,7 +202,7 @@ body {
   padding: 0;
   margin: 0;
 }
-.catalogue-title p{
+.catalogue-title p , .catalogue-title2 p{
   z-index: 10;
   font-weight: 400;
   font-size: 0.9em;
